--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-send-intent",
-  "version": "1.3.0",
+  "name": "react-native-send-intent-module",
+  "version": "1.0.0",
   "description": "React Native Android module to use Android's Intent actions for send sms, text to shareable apps, open custom apps, make phone calls and etc",
   "main": "index.js",
   "types": "index.d.ts",
@@ -26,10 +26,10 @@
     "maps",
     "android"
   ],
-  "author": "Lucas Ferreira <contato@lucasferreira.com>",
+  "author": "Aaditya Paliwal",
   "license": "MIT",
-  "repository": "https://github.com/lucasferreira/react-native-send-intent",
-  "bugs": "https://github.com/lucasferreira/react-native-send-intent/issues",
+  "repository": "https://github.com/aadityapaliwal94/react-native-send-intent",
+  "bugs": "https://github.com/aadityapaliwal94/react-native-send-intent/issues",
   "peerDependencies": {
     "react-native": "*"
   }
